avoid pagebreak in middle of graph on Safari

--- a/solution/ui/src/pages/index.less
+++ b/solution/ui/src/pages/index.less
@@ -13,6 +13,10 @@
 
   .resultsContainer {
 
+    h1 {
+      height: 12vh;
+    }
+
     .topRow {
       height: 88vh;
     }
@@ -22,7 +26,7 @@
     }
 
     .tableRow {
-      height: 95vh;
+      height: 90vh;
     }
 
     .runningTotals-container {
